unpackaged/main/default/objects/TNP_ConsentMap__c/TNP_ConsentMap__c.object-meta.xml
<CustomObject>
    <customSettingsType>Hierarchy</customSettingsType>
    <label>TNP_ConsentMap</label>
</CustomObject>