unpackaged/main/default/objects/TNP_ConsentMap__c/fields/LastUpdateOptinCalling_pc__c.field-meta.xml
<CustomField>
    <fullName>LastUpdateOptinCalling_pc__c</fullName>
    <label>lastUpdateOptinCalling</label>
    <length>255</length>
    <type>Text</type>
</CustomField>