unpackaged/main/default/objects/TNP_ConsentMap__c/fields/LastUpdateOptinEmailing_pc__c.field-meta.xml
<CustomField>
    <fullName>LastUpdateOptinEmailing_pc__c</fullName>
    <label>lastUpdateOptinEmail</label>
    <length>255</length>
    <type>Text</type>
</CustomField>