unpackaged/main/default/objects/TNP_ConsentMap__c/fields/LastUpdateOptinInstantMessaging_pc__c.field-meta.xml
<CustomField>
    <fullName>LastUpdateOptinInstantMessaging_pc__c</fullName>
    <label>LastUpdateOptinInstantMessaging</label>
    <length>255</length>
    <type>Text</type>
</CustomField>