unpackaged/main/default/objects/TNP_ConsentMap__c/fields/LastUpdateOptinMailing_pc__c.field-meta.xml
<CustomField>
    <fullName>LastUpdateOptinMailing_pc__c</fullName>
    <label>lastUpdateOptinMailing</label>
    <length>255</length>
    <type>Text</type>
</CustomField>