unpackaged/main/default/objects/TNP_ConsentMap__c/fields/OptinCalling_pc__c.field-meta.xml
<CustomField>
    <fullName>OptinCalling_pc__c</fullName>
    <label>optinPhone</label>
    <length>255</length>
    <type>Text</type>
</CustomField>