unpackaged/main/default/objects/TNP_ConsentMap__c/fields/OptinEmailing_pc__c.field-meta.xml
<CustomField>
    <fullName>OptinEmailing_pc__c</fullName>
    <label>optinEmail</label>
    <length>255</length>
    <type>Text</type>
</CustomField>