unpackaged/main/default/objects/TNP_ConsentMap__c/fields/OptinInstantMessaging_pc__c.field-meta.xml
<CustomField>
    <fullName>OptinInstantMessaging_pc__c</fullName>
    <label>OptinInstantMessaging</label>
    <length>255</length>
    <type>Text</type>
</CustomField>