unpackaged/main/default/objects/TNP_ConsentMap__c/fields/OptinMailing_pc__c.field-meta.xml
<CustomField>
    <fullName>OptinMailing_pc__c</fullName>
    <label>optinMailing</label>
    <length>255</length>
    <type>Text</type>
</CustomField>